kubernetes-volumes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homework
  labels:
    app: nginx
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        homework: "true"

      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: config
          mountPath: /homework/conf
          readOnly: true
        command: ["/bin/sh", "-c"]
        args:
        - echo 'server { listen 8000; root /homework; }' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
        startupProbe:
          httpGet:
            path: /
            port: 8000
          failureThreshold: 30
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3

      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: pvc-homework
      - name: config
        configMap:
          name: cm-homework
